--- a/client/src/translations/pl/common.json
+++ b/client/src/translations/pl/common.json
@@ -641,6 +641,7 @@
                         "failure": ""
                     },
                     "errorMessages": {
+                        "CompanyNotFound": "Nie znaleziono firmy",
                         "dataValidation": {
                             "missingProps": "Brak danych firmy",
                             "MissingRefreshToken": "Brakujący token uwierzytelniający"
