new showcase images and fixed translations

--- a/client/src/translations/en/common.json
+++ b/client/src/translations/en/common.json
@@ -531,10 +531,11 @@
                 "createProject": "Create project",
                 "createTeam": "Create team",
                 "createTask": "Create task",
-                "projectsOverview": "Projects overview",
-                "tasksOverview": "Tasks overview",
-                "teamOverview": "Team overview",
-                "usersOverview": "Users overview",
+                "teamDetails": "Team details",
+                "projectsOverview": "Projects",
+                "tasksOverview": "Tasks",
+                "teamsOverview": "Teams",
+                "usersOverview": "Users",
                 "userProfile": "User profile"
             }
         },
