--- a/client/src/translations/pl/common.json
+++ b/client/src/translations/pl/common.json
@@ -507,7 +507,7 @@
                 "createTask": "Stwórz zadanie",
                 "projectsOverview": "Podgląd projektów",
                 "tasksOverview": "Podgląd zadań",
-                "teamOverview": "Podgląd zespołu",
+                "teamDetails": "Podgląd zespołu",
                 "teamsOverview": "Podgląd zespołów",
                 "usersOverview": "Podgląd użytkowników",
                 "userProfile": "Profil użytkownika"
